# data-RDH-voterfiles

./: blueripple-data-RDH-voterfiles.cabal  cabal.project
src/BlueRipple/Data/: RDH_Voterfiles.hs  RDH_Voterfiles_Frames.hs  RDH_Voterfiles_Paths.hs
