cabal-version: 3.0

name:           blueripple-data-RDH-voterfiles
version:        0.1.0.0
synopsis:       Loader for RDH Voterfile data
category:       Data
homepage:       https://github.com/blueripple/data-RDH-voterfiles
bug-reports:    https://github.com/blueripple/data-RDH-voterfiles/issues
author:         Adam Conner-Sax
maintainer:     adam@blueripplepolitics.org
copyright:      2024 Adam Conner-Sax
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/blueripple/data-RDH-voterfiles

library
  exposed-modules: BlueRipple.Data.RDH_Voterfiles_Paths
                 , BlueRipple.Data.RDH_Voterfiles_Frames
                 , BlueRipple.Data.RDH_Voterfiles
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
        blueripple-data-loading
      , blueripple-data-tools
      , blueripple-data-types
      , blueripple-small-data-sets
      , array >= 0.5 && < 0.6
      , cassava >= 0.5 && < 0.6
      , containers >= 0.6 && < 0.7
      , discrimination >= 0.5 && < 0.6
      , Frames >= 0.7 && < 0.8
      , Frames-utils >= 0.3.1
      , Frames-streamly >= 0.2
      , Frames-serialize >= 0.1.0
      , Frames-map-reduce >= 0.4.1.2 && < 0.5
      , flat >= 0.5 && < 0.7
      , knit-haskell >= 0.10.5 && < 0.11
      , lens >= 5 && < 6
      , map-reduce-folds >= 0.1.2 && < 0.2
      , base >=4.12.0 && <5
      , foldl >= 1.4 && < 1.5
      , relude >= 1.0.0 && < 1.3
      , streamly >=0.9 && <0.11
      , streamly-core >=0.1.0 && <0.3
      , text >=1.2.3 && < 2.2
      , th-env >= 0.1.0.3 && < 0.2
      , vector >= 0.12 && < 0.14
      , vector-th-unbox >= 0.2 && < 0.3
      , vinyl >= 0.13 && < 0.15

  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010
